// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user list renders correctly 1`] = `
.c3 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
}

.c3:hover {
  opacity: 0.90;
}

.c3:focus {
  outline: none;
}

.c3:active {
  opacity: 0.80;
}

.c3:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c2 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  margin-top: 16px;
}

.c0 {
  padding: 16px;
}

.c1 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  padding: 8px 0px 0px;
}

@media (max-width:47.9375em) {
  .c4 {
    display: none;
  }
}

<div
  className="c0"
>
  <h1>
    Admin dashboard
  </h1>
  <div
    className="c1"
  >
    <div>
      <div
        className="c2"
      >
        <h2>
          Users
        </h2>
        <button
          className="c3"
          onClick={[Function]}
        >
          <i
            className="fas fa-plus"
          />
           
          <span
            className="c4"
          >
            Create User
          </span>
        </button>
      </div>
      <div
        className="c5"
      />
    </div>
  </div>
</div>
`;

exports[`user list renders correctly 2`] = `
.c3 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
}

.c3:hover {
  opacity: 0.90;
}

.c3:focus {
  outline: none;
}

.c3:active {
  opacity: 0.80;
}

.c3:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c6 {
  min-height: 60px;
  padding: 0px 16px;
  margin: 0px;
  display: grid;
  grid-template-columns: 3fr 1fr 25px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  margin: 0px;
}

.c9 {
  float: right;
  width: 80px;
  padding: 4px;
  font-weight: bold;
  text-align: center;
  border-radius: 6px;
}

.c8 {
  cursor: pointer;
  float: right;
  margin-right: 10px;
  grid-column: 3;
}

.c2 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  margin-top: 16px;
}

.c0 {
  padding: 16px;
}

.c1 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  padding: 8px 0px 0px;
}

@media (max-width:47.9375em) {
  .c4 {
    display: none;
  }
}

<div
  className="c0"
>
  <h1>
    Admin dashboard
  </h1>
  <div
    className="c1"
  >
    <div>
      <div
        className="c2"
      >
        <h2>
          Users
        </h2>
        <button
          className="c3"
          onClick={[Function]}
        >
          <i
            className="fas fa-plus"
          />
           
          <span
            className="c4"
          >
            Create User
          </span>
        </button>
      </div>
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <p
            className="c7"
          >
            test
          </p>
          <i
            className="c8 far fa-trash-alt"
            onClick={[Function]}
          />
        </div>
        <div
          className="c6"
        >
          <p
            className="c7"
          >
            admin
          </p>
          <p
            className="c9"
          >
            admin
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
